--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spu-api",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A Node.js library for Seattle Public Utilities web services.",
   "main": "lib/Index.js",
   "types": "lib/Index.d.ts",
@@ -17,6 +17,7 @@
     "typescript": "^2.2.2"
   },
   "dependencies": {
+    "debug": "^2.6.8",
     "request": "^2.81.0"
   }
 }
